--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
-  <string name="app_name">NewxelTestApp</string>
+    <string name="app_name">NewxelTestApp</string>
+    <string name="headshot_contentDescription">User profile photo image</string>
+    <string name="settings_contentDescription">Profile settings button</string>
+    <string name="mobile_contentDescription">Profile mobile button</string>
+    <string name="logo_contentDescription">Openpay logo</string>
 </resources>
