--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="full_name_format">%1$s %2$s</string>
     <string name="location_format">%1$s, %2$s</string>
     <string name="profile_error">Profile failed to load</string>
+    <string name="cards_error">Card fetching failed</string>
+    <string name="mobile_message">Make a call</string>
 </resources>
